--- a/spec/fixtures/vcr_cassettes/Movies_Index_Page_Discover_Movies_/when_top_rated_movies_is_selected/has_a_link_to_home.yml
+++ b/spec/fixtures/vcr_cassettes/Movies_Index_Page_Discover_Movies_/when_top_rated_movies_is_selected/has_a_link_to_home.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/movie/?api_key=<HIDDEN_KEY>&append_to_response=reviews,credits
+    uri: https://api.themoviedb.org/3/search/movie?api_key=<HIDDEN_KEY>&query
     body:
       encoding: US-ASCII
       string: ''
@@ -15,8 +15,8 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 404
-      message: Not Found
+      code: 200
+      message: OK
     headers:
       Content-Type:
       - application/json;charset=utf-8
@@ -24,32 +24,39 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Sat, 09 Sep 2023 22:07:18 GMT
       Server:
       - openresty
-      X-Cascade:
-      - pass
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 0ad04c4a8f86817194f97d0815bf2d05
+      X-Memc-Age:
+      - '14687'
+      X-Memc-Expires:
+      - '9337'
+      Date:
+      - Sat, 09 Sep 2023 20:05:59 GMT
+      Cache-Control:
+      - public, max-age=23814
       Etag:
-      - W/"6001c1d4105f2f67beabf59d00458908"
+      - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Error from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 ffc1e24c06bfbb135c0a4d240b382048.cloudfront.net (CloudFront)
+      - 1.1 f3802d173009698413044360f84de06c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - HIO52-P1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - BwsJ5NOR7ncUBzi5TRu0zTWMDbkgamkQo8HtMbgnqeIjwu_8G5KeuQ==
+      - ePqimbLKCyuW4se3aCVmxcMn97iISnQzJxKnrrC9YrjzEFk6pIwmuA==
       Age:
-      - '1'
+      - '7264'
     body:
       encoding: ASCII-8BIT
-      string: '{"success":false,"status_code":34,"status_message":"The resource you
-        requested could not be found."}'
-  recorded_at: Sat, 09 Sep 2023 22:07:19 GMT
+      string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
+  recorded_at: Sat, 09 Sep 2023 22:07:03 GMT
 recorded_with: VCR 6.2.0
